bk_ida/gobmkida/g0/accumulate_influence
/data/output_dir/patch/gobmk/ida/gcc/O0/gobmk-gcc-O0/accumulate_influence/src/engine/influence.c:649:7: error: use of undeclared identifier 'working_area_initialized_6'
if ( !working_area_initialized_6 ) 
      ^
/data/output_dir/patch/gobmk/ida/gcc/O0/gobmk-gcc-O0/accumulate_influence/src/engine/influence.c:652:1: error: use of undeclared identifier 'working_5'
working_5[ii] = 0; 
^
/data/output_dir/patch/gobmk/ida/gcc/O0/gobmk-gcc-O0/accumulate_influence/src/engine/influence.c:653:1: error: use of undeclared identifier 'working_area_initialized_6'
working_area_initialized_6 = 1; 
^
/data/output_dir/patch/gobmk/ida/gcc/O0/gobmk-gcc-O0/accumulate_influence/src/engine/influence.c:655:1: error: use of undeclared identifier 'queue_4'
queue_4[0] = pos; 
^
/data/output_dir/patch/gobmk/ida/gcc/O0/gobmk-gcc-O0/accumulate_influence/src/engine/influence.c:656:1: error: use of undeclared identifier 'working_5'
working_5[pos] = strength; 
^
/data/output_dir/patch/gobmk/ida/gcc/O0/gobmk-gcc-O0/accumulate_influence/src/engine/influence.c:659:7: error: use of undeclared identifier 'queue_4'
iia = queue_4[queue_start]; 
      ^
/data/output_dir/patch/gobmk/ida/gcc/O0/gobmk-gcc-O0/accumulate_influence/src/engine/influence.c:669:38: error: use of undeclared identifier 'working_5'
current_strength = inv_attenuation * working_5[iia] / 4096; 
                                     ^
/data/output_dir/patch/gobmk/ida/gcc/O0/gobmk-gcc-O0/accumulate_influence/src/engine/influence.c:684:7: error: use of undeclared identifier 'working_5'
if ( !working_5[delta[d] + iia] ) 
      ^
/data/output_dir/patch/gobmk/ida/gcc/O0/gobmk-gcc-O0/accumulate_influence/src/engine/influence.c:685:1: error: use of undeclared identifier 'queue_4'
queue_4[queue_end++] = iia + delta[d]; 
^
/data/output_dir/patch/gobmk/ida/gcc/O0/gobmk-gcc-O0/accumulate_influence/src/engine/influence.c:686:1: error: use of undeclared identifier 'working_5'
working_5[delta[d] + iia] += contribution; 
^
/data/output_dir/patch/gobmk/ida/gcc/O0/gobmk-gcc-O0/accumulate_influence/src/engine/influence.c:712:7: error: use of undeclared identifier 'working_5'
if ( !working_5[delta[d] + iia] ) 
      ^
/data/output_dir/patch/gobmk/ida/gcc/O0/gobmk-gcc-O0/accumulate_influence/src/engine/influence.c:713:1: error: use of undeclared identifier 'queue_4'
queue_4[queue_end++] = iia + delta[d]; 
^
/data/output_dir/patch/gobmk/ida/gcc/O0/gobmk-gcc-O0/accumulate_influence/src/engine/influence.c:714:1: error: use of undeclared identifier 'working_5'
working_5[delta[d] + iia] += contribution_0; 
^
/data/output_dir/patch/gobmk/ida/gcc/O0/gobmk-gcc-O0/accumulate_influence/src/engine/influence.c:724:7: error: use of undeclared identifier 'queue_4'
iib = queue_4[k]; 
      ^
/data/output_dir/patch/gobmk/ida/gcc/O0/gobmk-gcc-O0/accumulate_influence/src/engine/influence.c:725:6: error: use of undeclared identifier 'working_5'
if ( working_5[iib] > 81 || !influence[iib] ) 
     ^
/data/output_dir/patch/gobmk/ida/gcc/O0/gobmk-gcc-O0/accumulate_influence/src/engine/influence.c:726:19: error: use of undeclared identifier 'working_5'
influence[iib] += working_5[iib]; 
                  ^
/data/output_dir/patch/gobmk/ida/gcc/O0/gobmk-gcc-O0/accumulate_influence/src/engine/influence.c:727:1: error: use of undeclared identifier 'working_5'
working_5[iib] = 0; 
^
17 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/gcc/O0/gobmk-gcc-O0/accumulate_influence/src/obj/1/influence.o] Error 1
